<resources>
    <string name="app_name">EthereumWallet</string>
    <string name="send_button_label">Send</string>
    <string name="receive_button_label">Receive</string>
    <string name="address_label">Address</string>
    <string name="amount_label">Amount</string>
    <string name="copy_button_label">Copy Address</string>
    <string name="transaction_id_label">transaction_id</string>
    <string name="visit_transaction_button_label">View on Etherscan</string>
    <string name="eth_price_label">Fetching current Price</string>
    <string name="eth_balance_label">Fetching current Balance</string>
    <string name="welcome_message">Let\'s Get Started!</string>
    <string name="input_private_key_button_label">Import Wallet</string>
    <string name="private_key_label">Existing Private Key</string>
    <string name="create_new_wallet_button_label">Create New Wallet</string>
    <string name="transaction_history_label">View Transaction History</string>
</resources>